[gd_scene format=3 uid="uid://inrp5krg0n05"]

[ext_resource type="Script" uid="uid://25qxaclcuabx" path="res://Scenes/victory_layer.gd" id="1_7wecw"]
[ext_resource type="Texture2D" uid="uid://171bw6bjujgq" path="res://assets/star.png" id="2_orto5"]

[sub_resource type="LabelSettings" id="LabelSettings_2jwu1"]
font_size = 46

[node name="VictoryLayer" type="CanvasLayer" unique_id=769449728]
script = ExtResource("1_7wecw")

[node name="ColorRect" type="ColorRect" parent="." unique_id=905734044]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.39215687)

[node name="CenterContainer" type="CenterContainer" parent="." unique_id=496633196]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -103.5
offset_top = -82.5
offset_right = 103.5
offset_bottom = 82.5
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer" unique_id=1178785039]
custom_minimum_size = Vector2(400, 400)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer" unique_id=359544092]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer" unique_id=1272656949]
layout_mode = 2
text = "Victory"
label_settings = SubResource("LabelSettings_2jwu1")
horizontal_alignment = 1

[node name="starContainer" type="HBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer" unique_id=996764620]
layout_mode = 2

[node name="Star1" type="TextureRect" parent="CenterContainer/PanelContainer/VBoxContainer/starContainer" unique_id=872933752]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture = ExtResource("2_orto5")
expand_mode = 2
stretch_mode = 5

[node name="Star2" type="TextureRect" parent="CenterContainer/PanelContainer/VBoxContainer/starContainer" unique_id=669897827]
unique_name_in_owner = true
modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture = ExtResource("2_orto5")
expand_mode = 2
stretch_mode = 5

[node name="Star3" type="TextureRect" parent="CenterContainer/PanelContainer/VBoxContainer/starContainer" unique_id=751449005]
unique_name_in_owner = true
modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture = ExtResource("2_orto5")
expand_mode = 2
stretch_mode = 5

[node name="survivedLable" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer" unique_id=1729908475]
unique_name_in_owner = true
layout_mode = 2
text = "Survived + 1"
horizontal_alignment = 1

[node name="HealthLable" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer" unique_id=1405696991]
unique_name_in_owner = true
layout_mode = 2
text = "Full Health + 1"
horizontal_alignment = 1

[node name="MoneyLable" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer" unique_id=170842245]
unique_name_in_owner = true
layout_mode = 2
text = "Money + 1"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer" unique_id=1157744079]
layout_mode = 2
theme_override_constants/separation = 65
alignment = 1

[node name="retryButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer" unique_id=1210949575]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Retry"

[node name="quitButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer" unique_id=114676042]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Quit"

[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/retryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/quitButton" to="." method="_on_quit_button_pressed"]
